--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -69,3 +69,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/ActionRoguelike/Maps/TestLevel.TestLevel
 
+[/Script/AIModule.AISystem]
+bAllowControllersAsEQSQuerier=False
+
